feat(publish): prepare for publishing

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "macos-location-changer",
-  "title": "MacOS Location Changer",
-  "description": "Lists and allows changing the current network location on Mac OS.",
+  "name": "mac-network-location-changer",
+  "title": "Mac Network Location Changer",
+  "description": "Lists and changes current network location on Mac.",
   "icon": "extension-icon.png",
   "author": "rcouto",
   "owner": "ruicouto-com",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "categories": [
     "System",
     "Developer Tools"
